wxc/include/ewxw/wxc_glue.h

void       wxClipboard_Clear( TSelf(wxClipboard) _obj );
void       wxClipboard_Close( TSelf(wxClipboard) _obj );
TClass(wxClipboard) wxClipboard_Create(  );
int        wxClipboard_Flush( TSelf(wxClipboard) _obj );
int        wxClipboard_GetData( TSelf(wxClipboard) _obj, void* data );
TBool      wxClipboard_IsOpened( TSelf(wxClipboard) _obj );
TBool      wxClipboard_IsSupported( TSelf(wxClipboard) _obj, void* format );
int        wxClipboard_Open( TSelf(wxClipboard) _obj );
int        wxClipboard_SetData( TSelf(wxClipboard) _obj, void* data );
void       wxClipboard_UsePrimarySelection( TSelf(wxClipboard) _obj, int primary );